name:                dicom-dictionary-content
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/danplubell/dicom-dictionary-content#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2015 Dan Plubell
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.DICOM.Dictionary.Internal.InternalDictionary
  build-depends:       base >= 4.7 && < 5
                     , dicom-model
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/danplubell/dicom-dictionary-content
